# chaos-dots

./: PKGBUILD  pyproject.toml
src/chaos_dots/explanations/dotfiles/: dots.py
src/chaos_dots/roles/dotfiles/: dotfiles.py  dotfiles_new.py
src/chaos_dots/roles/dotfiles/old/: main.yml  process_charonte_item.yml  process_charonte_item_open.yml  process_dotfile.yml
