[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-dots"
version = "0.1.0"
description = "Dotfile manager plugin for Ch-aOS"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyinfra",
    "omegaconf",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.entry-points."chaos.roles"]
dotfiles = "chaos_dots.roles.dotfiles.dotfiles_new:runDotfiles"

[project.entry-points."chaos.aliases"]
dots = "dotfiles"

[project.entry-points."chaos.explain"]
dotfiles = "chaos_dots.explanations.dotfiles.dots:DotfilesExplain"

[project.entry-points.'chaos.keys']
dotfiles = 'chaos_dots.roles.dotfiles.dotfiles_new:dotfiles_chobolo_keys'
